tests/ui/rfcs/rfc-2528-type-changing-struct-update/issue-92010-trait-bound-not-satisfied.stderr
error[E0308]: mismatched types
  --> $DIR/issue-92010-trait-bound-not-satisfied.rs:8:43
   |
LL |     fn y(&self, y: f64) -> Self { P{y, .. self.clone() } }
   |                                           ^^^^^^^^^^^^ expected `P<T>`, found `&P<T>`
   |
   = note: expected struct `P<_>`
           found reference `&P<_>`

error: aborting due to 1 previous error

For more information about this error, try `rustc --explain E0308`.
